--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-live-clock": "^6.0.6",
     "react-on-screen": "^2.1.1"
   },
   "devDependencies": {
